--- a/packages/material/scss/tabstrip/_theme.scss
+++ b/packages/material/scss/tabstrip/_theme.scss
@@ -5,7 +5,7 @@
     .k-tabstrip-items {
 
         .k-disabled {
-            color: map-get( $theme, disabled-text );
+            color: k-map-get( $theme, disabled-text );
         }
 
     }
