--- a/packages/material/scss/timeselector/_variables.scss
+++ b/packages/material/scss/timeselector/_variables.scss
@@ -2,14 +2,14 @@
 $time-selector-border-width: 1px !default;
 $time-selector-font-family: $font-family !default;
 $time-selector-font-size: $font-size !default;
-$time-selector-line-height: (20 / 14) !default;
+$time-selector-line-height: k-math-div( 20, 14 ) !default;
 
 $time-selector-bg: $component-bg !default;
 $time-selector-text: $component-text !default;
 $time-selector-border: $component-border !default;
 
-$time-selector-header-padding-x: map-get( $spacing, 1 ) !default;
-$time-selector-header-padding-y: map-get( $spacing, 1 ) !default;
+$time-selector-header-padding-x: k-map-get( $spacing, 1 ) !default;
+$time-selector-header-padding-y: k-map-get( $spacing, 1 ) !default;
 $time-selector-header-border-width: 0px !default;
 
 $time-list-width: 4em !default;
