--- a/packages/material/scss/action-buttons/_theme.scss
+++ b/packages/material/scss/action-buttons/_theme.scss
@@ -5,8 +5,8 @@
     .k-actions {
 
         .k-button-solid-base {
-            background-color: try-shade( $kendo-button-bg );
-            border-color: try-shade( $kendo-button-bg );
+            background-color: k-try-shade( $kendo-button-bg );
+            border-color: k-try-shade( $kendo-button-bg );
         }
 
     }
