--- a/packages/material/scss/action-sheet/_variables.scss
+++ b/packages/material/scss/action-sheet/_variables.scss
@@ -10,7 +10,7 @@ $actionsheet-border-radius: 0px !default;
 
 $actionsheet-font-size: $font-size !default;
 $actionsheet-font-family: $font-family !default;
-$actionsheet-line-height: ( 20 / 14 ) !default;
+$actionsheet-line-height: k-math-div( 20, 14 ) !default;
 
 $actionsheet-bg: $component-bg !default;
 $actionsheet-text: $component-text !default;
@@ -19,8 +19,8 @@ $actionsheet-shadow: $box-shadow-depth-4 !default;
 
 
 // Actionsheet header
-$actionsheet-header-padding-x: map-get( $spacing, 4 ) !default;
-$actionsheet-header-padding-y: map-get( $spacing, 2 ) !default;
+$actionsheet-header-padding-x: k-map-get( $spacing, 4 ) !default;
+$actionsheet-header-padding-y: k-map-get( $spacing, 2 ) !default;
 $actionsheet-header-border-width: null !default;
 $actionsheet-header-font-size: null !default;
 $actionsheet-header-font-family: null !default;
@@ -35,8 +35,8 @@ $actionsheet-header-shadow: null !default;
 
 // Actionsheet item
 $actionsheet-item-min-height: 40px !default;
-$actionsheet-item-padding-x: map-get( $spacing, 4 ) !default;
-$actionsheet-item-padding-y: map-get( $spacing, 2 ) !default;
+$actionsheet-item-padding-x: k-map-get( $spacing, 4 ) !default;
+$actionsheet-item-padding-y: k-map-get( $spacing, 2 ) !default;
 $actionsheet-item-border-width: 1px !default;
 $actionsheet-item-spacing: 12px !default;
 
@@ -66,7 +66,7 @@ $actionsheet-item-disabled-border: null !default;
 $actionsheet-item-disabled-gradient: null !default;
 $actionsheet-item-disabled-shadow: null !default;
 
-$actionsheet-item-hover-background: rgba(0, 0, 0, .04) !default;
-$actionsheet-item-focus-background: rgba(0, 0, 0, .12) !default;
+$actionsheet-item-hover-background: rgba( black, .04 ) !default;
+$actionsheet-item-focus-background: rgba( black, .12 ) !default;
 $actionsheet-item-focus-shadow: null !default;
 $actionsheet-item-disabled-opacity: .42 !default;
