--- a/packages/material/scss/button/_theme.scss
+++ b/packages/material/scss/button/_theme.scss
@@ -6,7 +6,7 @@
     @each $name, $color in $kendo-button-theme-colors {
         .k-button-solid-#{$name} {
             @include box-shadow( $kendo-button-shadow );
-            color: if( $name == "base", $kendo-button-text, contrast-wcag( $color ) );
+            color: if( $name == "base", $kendo-button-text, k-contrast-color( $color ) );
             background-color: if( $name == "base", $kendo-button-bg, $color );
             border-color: if( $name == "base", $kendo-button-bg, $color );
 
