--- a/packages/material/scss/coloreditor/_variables.scss
+++ b/packages/material/scss/coloreditor/_variables.scss
@@ -1,5 +1,5 @@
 // Coloreditor/FlatColorPicker
-$coloreditor-spacer: map-get( $spacing, 3 ) !default;
+$coloreditor-spacer: k-map-get( $spacing, 3 ) !default;
 
 $coloreditor-min-width: 294px !default;
 $coloreditor-border-width: 1px !default;
@@ -16,9 +16,9 @@ $coloreditor-focus-shadow: $box-shadow-depth-2 !default;
 
 $coloreditor-header-padding-y: $coloreditor-spacer !default;
 $coloreditor-header-padding-x: $coloreditor-header-padding-y !default;
-$coloreditor-header-actions-gap: map-get( $spacing, 2 ) !default;
+$coloreditor-header-actions-gap: k-map-get( $spacing, 2 ) !default;
 
-$coloreditor-preview-gap: map-get( $spacing, 1 ) !default;
+$coloreditor-preview-gap: k-map-get( $spacing, 1 ) !default;
 $coloreditor-color-preview-width: 32px !default;
 $coloreditor-color-preview-height: 12px !default;
 
