--- a/packages/material/scss/dropzone/_variables.scss
+++ b/packages/material/scss/dropzone/_variables.scss
@@ -1,24 +1,24 @@
 // Dropzone
-$dropzone-padding-x: map-get( $spacing, 2 ) !default;
-$dropzone-padding-y: map-get( $spacing, 2 ) !default;
+$dropzone-padding-x: k-map-get( $spacing, 2 ) !default;
+$dropzone-padding-y: k-map-get( $spacing, 2 ) !default;
 $dropzone-border-width: 1px !default;
 $dropzone-min-height: 220px !default;
 
 $dropzone-font-family: $font-family !default;
 $dropzone-font-size: $font-size !default;
-$dropzone-line-height: ( 20 / 14 ) !default;
+$dropzone-line-height: k-math-div( 20, 14 ) !default;
 
-$dropzone-bg: try-shade( $base-bg, 1 ) !default;
+$dropzone-bg: k-try-shade( $base-bg, 1 ) !default;
 $dropzone-text: $base-text !default;
 $dropzone-border: $base-border !default;
 
 $dropzone-icon-size: ( $icon-size * 3 ) !default;
-$dropzone-icon-spacing: map-get( $spacing, 6 ) !default;
-$dropzone-icon-text: try-tint( $dropzone-text, 4 ) !default;
+$dropzone-icon-spacing: k-map-get( $spacing, 6 ) !default;
+$dropzone-icon-text: k-try-tint( $dropzone-text, 4 ) !default;
 $dropzone-icon-hover-text: $primary !default;
 
 $dropzone-hint-font-size: null !default;
-$dropzone-hint-spacing: map-get( $spacing, 2 ) !default;
+$dropzone-hint-spacing: k-map-get( $spacing, 2 ) !default;
 $dropzone-hint-text: null !default;
 
 $dropzone-note-font-size: $font-size-sm !default;
