--- a/packages/material/scss/editor/_variables.scss
+++ b/packages/material/scss/editor/_variables.scss
@@ -10,7 +10,7 @@ $editor-placeholder-opacity: $kendo-input-placeholder-opacity !default;
 $editor-selected-text: $primary-contrast !default;
 $editor-selected-bg: $primary !default;
 
-$editor-highlighted-bg: mix($primary, #ffffff, 20%) !default;
+$editor-highlighted-bg: k-color-mix($primary, #ffffff, 20%) !default;
 
 $editor-export-tool-icon-margin-x: .5em !default;
 
