--- a/packages/material/scss/grid/_theme.scss
+++ b/packages/material/scss/grid/_theme.scss
@@ -1,7 +1,7 @@
 @import "~@progress/kendo-theme-default/scss/grid/_theme.scss";
 
 @include exports ("grid/theme/material") {
-    $grid-filter-button-focus: rgba(0, 0, 0, .12) !default;
+    $grid-filter-button-focus: rgba( black, .12 ) !default;
 
     .k-grid {
 
