--- a/packages/material/scss/grid/_variables.scss
+++ b/packages/material/scss/grid/_variables.scss
@@ -78,7 +78,7 @@ $grid-alt-border: null !default;
 
 /// Background color of hovered rows in grid
 /// @group grid
-$grid-hovered-bg: rgba( contrast-wcag( $grid-bg ), .07 ) !default;
+$grid-hovered-bg: rgba( k-contrast-color( $grid-bg ), .07 ) !default;
 /// Text color of hovered rows in grid
 /// @group grid
 $grid-hovered-text: null !default;
@@ -88,7 +88,7 @@ $grid-hovered-border: $grid-border !default;
 
 /// Background color of selected rows in grid
 /// @group grid
-$grid-selected-bg: rgba( contrast-wcag( $grid-bg ), .04 ) !default;
+$grid-selected-bg: rgba( k-contrast-color( $grid-bg ), .04 ) !default;
 /// Text color of selected rows in grid
 /// @group grid
 $grid-selected-text: null !default;
@@ -99,11 +99,11 @@ $grid-selected-border: $grid-border !default;
 $grid-grouping-row-bg: transparent !default;
 $grid-grouping-row-text: $grid-text !default;
 
-$grid-sorted-bg: rgba( contrast-wcag( $grid-bg ), .04 ) !default;
+$grid-sorted-bg: rgba( k-contrast-color( $grid-bg ), .04 ) !default;
 $grid-sorting-indicator-text: $grid-header-text !default;
 $grid-sorting-index-font-size: $font-size-sm !default;
 $grid-sorting-index-height: $icon-size !default;
-$grid-sorting-index-spacing-y: $icon-spacing / 2 !default;
+$grid-sorting-index-spacing-y: k-math-div( $icon-spacing, 2 ) !default;
 $grid-sorting-index-spacing-x: -$grid-sorting-index-spacing-y !default;
 
 
@@ -112,11 +112,11 @@ $grid-focused-shadow: $kendo-list-item-focus-shadow !default;
 $grid-edit-cell-padding-x: $grid-cell-padding-x !default;
 $grid-edit-cell-padding-y: 6px !default;
 
-$grid-command-cell-button-spacing: map-get( $spacing, 2 ) !default;
+$grid-command-cell-button-spacing: k-map-get( $spacing, 2 ) !default;
 
 $grid-sticky-bg: $grid-bg !default;
 $grid-sticky-text: $grid-text !default;
-$grid-sticky-border: rgba( contrast-wcag( $grid-bg ), .5 ) !default;
+$grid-sticky-border: rgba( k-contrast-color( $grid-bg ), .5 ) !default;
 
 $grid-sticky-alt-bg: $grid-sticky-bg !default;
 
@@ -127,18 +127,18 @@ $grid-sticky-header-border: $grid-sticky-border !default;
 $grid-sticky-footer-bg: $grid-sticky-header-bg !default;
 $grid-sticky-footer-hovered-bg: $grid-sticky-footer-bg !default;
 
-$grid-sticky-selected-bg: try-shade($grid-bg, 4%) !default;
+$grid-sticky-selected-bg: k-try-shade($grid-bg, 4%) !default;
 $grid-sticky-selected-alt-bg: $grid-sticky-selected-bg !default;
 
-$grid-sticky-hovered-bg: try-shade($grid-bg, 7%) !default;
-$grid-sticky-selected-hovered-bg: try-shade($grid-sticky-selected-bg, .87) !default;
+$grid-sticky-hovered-bg: k-try-shade($grid-bg, 7%) !default;
+$grid-sticky-selected-hovered-bg: k-try-shade($grid-sticky-selected-bg, .87) !default;
 
 $grid-column-menu-width: 250px !default;
 
 $grid-filter-menu-check-all-border-bottom-width: 0 !default;
 
-$grid-filter-menu-item-spacing-x: map-get( $spacing, 4 ) !default;
-$grid-filter-menu-item-spacing-y: map-get( $spacing, 2 ) !default;
+$grid-filter-menu-item-spacing-x: k-map-get( $spacing, 4 ) !default;
+$grid-filter-menu-item-spacing-y: k-map-get( $spacing, 2 ) !default;
 
 $grid-column-menu-popup-padding-x: null !default;
 $grid-column-menu-popup-padding-y: null !default;
@@ -150,7 +150,7 @@ $grid-column-menu-list-item-padding-x: $kendo-list-item-padding-x-md !default;
 $grid-column-menu-list-item-padding-y: $kendo-list-item-padding-y-md !default;
 
 $grid-column-menu-items-wrap-padding-x: 0 !default;
-$grid-column-menu-items-wrap-padding-y: map-get( $spacing, 2 ) !default;
+$grid-column-menu-items-wrap-padding-y: k-map-get( $spacing, 2 ) !default;
 
 $grid-column-menu-filter-container-padding-x: $padding-x !default;
 $grid-column-menu-filter-container-padding-y: $padding-y !default;
