--- a/packages/material/scss/input/_variables.scss
+++ b/packages/material/scss/input/_variables.scss
@@ -14,10 +14,10 @@ $kendo-input-border-radius: null !default;
 
 /// Horizontal padding of input components.
 /// @group input
-$kendo-input-padding-x: map-get( $spacing, 4 ) !default;
+$kendo-input-padding-x: k-map-get( $spacing, 4 ) !default;
 /// Vertical padding of input components.
 /// @group input
-$kendo-input-padding-y: map-get( $spacing, 2 ) !default;
+$kendo-input-padding-y: k-map-get( $spacing, 2 ) !default;
 ///Font family of input components.
 /// @group input
 $kendo-input-font-family: $font-family !default;
@@ -28,18 +28,18 @@ $kendo-input-font-size: $font-size-lg !default;
 /// @group input
 $kendo-input-line-height: 1.25 !default;
 
-$kendo-input-padding-x-sm: map-get( $spacing, 4 ) !default;
-$kendo-input-padding-y-sm: map-get( $spacing, 2 ) - map-get( $spacing, thin ) !default;
+$kendo-input-padding-x-sm: k-map-get( $spacing, 4 ) !default;
+$kendo-input-padding-y-sm: k-map-get( $spacing, 2 ) - k-map-get( $spacing, thin ) !default;
 $kendo-input-font-size-sm: $font-size-lg !default;
 $kendo-input-line-height-sm: 1.25 !default;
 
-$kendo-input-padding-x-md: map-get( $spacing, 4 ) !default;
-$kendo-input-padding-y-md: map-get( $spacing, 2 ) !default;
+$kendo-input-padding-x-md: k-map-get( $spacing, 4 ) !default;
+$kendo-input-padding-y-md: k-map-get( $spacing, 2 ) !default;
 $kendo-input-font-size-md: $font-size-lg !default;
 $kendo-input-line-height-md: 1.25 !default;
 
-$kendo-input-padding-x-lg: map-get( $spacing, 4 ) !default;
-$kendo-input-padding-y-lg: map-get( $spacing, 2 ) !default;
+$kendo-input-padding-x-lg: k-map-get( $spacing, 4 ) !default;
+$kendo-input-padding-y-lg: k-map-get( $spacing, 2 ) !default;
 $kendo-input-font-size-lg: $font-size-lg !default;
 $kendo-input-line-height-lg: 1.5 !default;
 
@@ -50,8 +50,8 @@ $kendo-input-sizes: (
         font-size: $kendo-input-font-size-sm,
         line-height: $kendo-input-line-height-sm,
         icon-size: calc( #{$icon-size} + #{$kendo-input-padding-y-sm * 2} ),
-        button-padding-x: map-get( $spacing, 1 ),
-        button-padding-y: map-get( $spacing, 1 )
+        button-padding-x: k-map-get( $spacing, 1 ),
+        button-padding-y: k-map-get( $spacing, 1 )
     ),
     md: (
         padding-x: $kendo-input-padding-x-md,
@@ -59,8 +59,8 @@ $kendo-input-sizes: (
         font-size: $kendo-input-font-size-md,
         line-height: $kendo-input-line-height-md,
         icon-size: calc( #{$icon-size} + #{$kendo-input-padding-y-md * 2} ),
-        button-padding-x: map-get( $spacing, 1 ),
-        button-padding-y: map-get( $spacing, 1 )
+        button-padding-x: k-map-get( $spacing, 1 ),
+        button-padding-y: k-map-get( $spacing, 1 )
     ),
     lg: (
         padding-x: $kendo-input-padding-x-lg,
@@ -68,12 +68,12 @@ $kendo-input-sizes: (
         font-size: $kendo-input-font-size-lg,
         line-height: $kendo-input-line-height-lg,
         icon-size: calc( #{$icon-size} + #{$kendo-input-padding-y-lg * 2} ),
-        button-padding-x: map-get( $spacing, 1 ),
-        button-padding-y: map-get( $spacing, 1 )
+        button-padding-x: k-map-get( $spacing, 1 ),
+        button-padding-y: k-map-get( $spacing, 1 )
     )
 ) !default;
 
-$kendo-input-bg: try-shade( $component-bg, .5 ) !default;
+$kendo-input-bg: k-try-shade( $component-bg, .5 ) !default;
 $kendo-input-text: $component-text !default;
 $kendo-input-border: rgba( $component-border, .38 ) !default;
 $kendo-input-shadow: null !default;
@@ -88,7 +88,7 @@ $kendo-input-focus-text: null !default;
 $kendo-input-focus-border: $primary !default;
 $kendo-input-focus-shadow: null !default;
 
-$kendo-input-disabled-bg: try-shade( $component-bg, .25 ) !default;
+$kendo-input-disabled-bg: k-try-shade( $component-bg, .25 ) !default;
 $kendo-input-disabled-text: $disabled-text !default;
 $kendo-input-disabled-border: rgba( $component-border, (alpha( $component-border ) / 2) ) !default;
 $kendo-input-disabled-gradient: null !default;
@@ -189,7 +189,7 @@ $kendo-input-clear-value-opacity: .5 !default;
 $kendo-input-clear-value-hover-text: null !default;
 $kendo-input-clear-value-hover-opacity: 1 !default;
 
-$kendo-input-values-margin-y: map-get( $spacing, thin ) !default;
+$kendo-input-values-margin-y: k-map-get( $spacing, thin ) !default;
 $kendo-input-values-margin-x: $kendo-input-values-margin-y !default;
 
 
