--- a/packages/material/scss/listview/_theme.scss
+++ b/packages/material/scss/listview/_theme.scss
@@ -9,7 +9,7 @@
     // Listview content
     .k-listview-content {}
     .k-listview-content > .k-selected.k-focus {
-        background-color: rgba( contrast-wcag( $listview-bg ), .12 );
+        background-color: rgba( k-contrast-color( $listview-bg ), .12 );
     }
 
 }
