--- a/packages/material/scss/listview/_variables.scss
+++ b/packages/material/scss/listview/_variables.scss
@@ -1,6 +1,6 @@
 // Listview
-$listview-padding-x: map-get( $spacing, 1 ) !default;
-$listview-padding-y: map-get( $spacing, 1 ) !default;
+$listview-padding-x: k-map-get( $spacing, 1 ) !default;
+$listview-padding-y: k-map-get( $spacing, 1 ) !default;
 $listview-border-width: 1px !default;
 $listview-font-family: $font-family !default;
 $listview-font-size: $font-size !default;
@@ -12,14 +12,14 @@ $listview-border: $component-border !default;
 
 $listview-grid-gap: 10px !default;
 
-$listview-item-padding-x: map-get( $spacing, 1 ) !default;
-$listview-item-padding-y: map-get( $spacing, 1 ) !default;
+$listview-item-padding-x: k-map-get( $spacing, 1 ) !default;
+$listview-item-padding-y: k-map-get( $spacing, 1 ) !default;
 
-$listview-item-selected-bg: rgba( contrast-wcag( $listview-bg ), .04 ) !default;
+$listview-item-selected-bg: rgba( k-contrast-color( $listview-bg ), .04 ) !default;
 $listview-item-selected-text: null !default;
 $listview-item-selected-border: null !default;
 
-$listview-item-focus-bg: rgba( contrast-wcag( $listview-bg ), .08 ) !default;
+$listview-item-focus-bg: rgba( k-contrast-color( $listview-bg ), .08 ) !default;
 $listview-item-focus-text: null !default;
 $listview-item-focus-border: null !default;
 $listview-item-focus-shadow: null !default;
