--- a/packages/material/scss/menu-button/_variables.scss
+++ b/packages/material/scss/menu-button/_variables.scss
@@ -2,5 +2,4 @@
 
 /// Horizontal padding of the arrow button.
 /// @group menu-button
-$kendo-menu-button-arrow-padding-x: map-get( $spacing, 1 ) !default;
-
+$kendo-menu-button-arrow-padding-x: k-map-get( $spacing, 1 ) !default;
