--- a/packages/material/scss/pager/_variables.scss
+++ b/packages/material/scss/pager/_variables.scss
@@ -1,6 +1,6 @@
 // Pager
-$pager-padding-x: map-get( $spacing, 2 ) !default;
-$pager-padding-y: map-get( $spacing, 2 ) !default;
+$pager-padding-x: k-map-get( $spacing, 2 ) !default;
+$pager-padding-y: k-map-get( $spacing, 2 ) !default;
 $pager-border-width: 1px !default;
 
 $pager-font-family: $font-family !default;
@@ -11,7 +11,7 @@ $pager-bg: $component-bg !default;
 $pager-text: if($dark-theme, $light-secondary-text, $dark-secondary-text) !default;
 $pager-border: $component-border !default;
 
-$pager-focus-bg: try-shade( $pager-bg, .5 ) !default;
+$pager-focus-bg: k-try-shade( $pager-bg, .5 ) !default;
 $pager-focus-shadow: null !default;
 
 $pager-section-spacing: $pager-padding-x !default;
@@ -41,7 +41,7 @@ $pager-number-border-radius: $pager-item-border-radius !default;
 $pager-number-spacing: $pager-item-spacing !default;
 
 $pager-item-focus-opacity: .12 !default;
-$pager-item-focus-bg: rgba($kendo-list-item-hover-bg, $pager-item-focus-opacity) !default;
+$pager-item-focus-bg: rgba( $kendo-list-item-hover-bg, $pager-item-focus-opacity ) !default;
 $pager-item-focus-shadow: null !default;
 
 $pager-number-bg: null !default;
@@ -49,17 +49,17 @@ $pager-number-text: $body-text !default;
 $pager-number-border: null !default;
 
 $pager-number-hover-opacity: .04 !default;
-$pager-number-hover-bg: rgba($pager-number-text, $pager-number-hover-opacity) !default;
+$pager-number-hover-bg: rgba( $pager-number-text, $pager-number-hover-opacity ) !default;
 $pager-number-hover-text: $pager-number-text !default;
 $pager-number-hover-border: null !default;
 
 $pager-number-selected-opacity: .22 !default;
-$pager-number-selected-bg: rgba($primary, $pager-number-selected-opacity) !default;
+$pager-number-selected-bg: rgba( $primary, $pager-number-selected-opacity ) !default;
 $pager-number-selected-text: $primary !default;
 $pager-number-selected-border: null !default;
 
 $pager-number-focus-opacity: .12 !default;
-$pager-number-focus-bg: rgba($pager-number-text, $pager-number-focus-opacity) !default;
+$pager-number-focus-bg: rgba( $pager-number-text, $pager-number-focus-opacity ) !default;
 $pager-number-focus-shadow: null !default;
 
 $pager-input-width: 5em !default;
