--- a/packages/material/scss/panelbar/_variables.scss
+++ b/packages/material/scss/panelbar/_variables.scss
@@ -3,17 +3,17 @@ $panelbar-padding-x: 0px !default;
 $panelbar-padding-y: 0px !default;
 $panelbar-font-family: $font-family !default;
 $panelbar-font-size: $font-size !default;
-$panelbar-line-height: (20 / 14) !default;
+$panelbar-line-height: k-math-div( 20, 14 ) !default;
 $panelbar-border-width: 1px !default;
 $panelbar-border-style: solid !default;
 $panelbar-item-border-width: 1px !default;
 $panelbar-item-border-style: solid !default;
 
-$panelbar-header-padding-x: map-get( $spacing, 6 ) !default;
-$panelbar-header-padding-y: map-get( $spacing, 3 ) !default;
+$panelbar-header-padding-x: k-map-get( $spacing, 6 ) !default;
+$panelbar-header-padding-y: k-map-get( $spacing, 3 ) !default;
 
-$panelbar-item-padding-x: map-get( $spacing, 6 ) !default;
-$panelbar-item-padding-y: map-get( $spacing, 3 ) !default;
+$panelbar-item-padding-x: k-map-get( $spacing, 6 ) !default;
+$panelbar-item-padding-y: k-map-get( $spacing, 3 ) !default;
 
 $panelbar-item-level-count: 4 !default;
 
@@ -26,18 +26,18 @@ $panelbar-header-text: $link-text !default;
 $panelbar-header-border: null !default;
 $panelbar-header-gradient: null !default;
 
-$panelbar-header-hovered-bg: try-shade( $panelbar-header-bg, .5 ) !default;
+$panelbar-header-hovered-bg: k-try-shade( $panelbar-header-bg, .5 ) !default;
 $panelbar-header-hovered-text: null !default;
 $panelbar-header-hovered-border: null !default;
 $panelbar-header-hovered-gradient: null !default;
 
-$panelbar-header-focused-bg: try-shade( $panelbar-header-bg, 1.5 ) !default;
+$panelbar-header-focused-bg: k-try-shade( $panelbar-header-bg, 1.5 ) !default;
 $panelbar-header-focused-text: null !default;
 $panelbar-header-focused-border: null !default;
 $panelbar-header-focused-gradient: null !default;
 $panelbar-header-focused-shadow: null !default;
 
-$panelbar-header-hovered-focused-bg: try-shade( $panelbar-header-bg, 2 ) !default;
+$panelbar-header-hovered-focused-bg: k-try-shade( $panelbar-header-bg, 2 ) !default;
 $panelbar-header-hovered-focused-text: null !default;
 $panelbar-header-hovered-focused-border: null !default;
 $panelbar-header-hovered-focused-gradient: null !default;
@@ -47,34 +47,34 @@ $panelbar-header-selected-text: $selected-text !default;
 $panelbar-header-selected-border: null !default;
 $panelbar-header-selected-gradient: null !default;
 
-$panelbar-header-selected-hovered-bg: try-tint($panelbar-header-selected-bg, .95) !default;
+$panelbar-header-selected-hovered-bg: k-try-tint($panelbar-header-selected-bg, .95) !default;
 $panelbar-header-selected-hovered-text: null !default;
 $panelbar-header-selected-hovered-border: null !default;
 $panelbar-header-selected-hovered-gradient: null !default;
 
-$panelbar-header-selected-focused-bg: try-tint($panelbar-header-selected-bg, 3) !default;
+$panelbar-header-selected-focused-bg: k-try-tint($panelbar-header-selected-bg, 3) !default;
 $panelbar-header-selected-focused-text: null !default;
 $panelbar-header-selected-focused-border: null !default;
 $panelbar-header-selected-focused-gradient: null !default;
 
-$panelbar-header-selected-hovered-focused-bg: try-tint($panelbar-header-selected-bg, 3.95) !default;
+$panelbar-header-selected-hovered-focused-bg: k-try-tint($panelbar-header-selected-bg, 3.95) !default;
 $panelbar-header-selected-hovered-focused-text: null !default;
 $panelbar-header-selected-hovered-focused-border: null !default;
 $panelbar-header-selected-hovered-focused-gradient: null !default;
 
 
-$panelbar-item-hovered-bg: try-shade( $panelbar-bg, .5 ) !default;
+$panelbar-item-hovered-bg: k-try-shade( $panelbar-bg, .5 ) !default;
 $panelbar-item-hovered-text: null !default;
 $panelbar-item-hovered-border: null !default;
 $panelbar-item-hovered-gradient: null !default;
 
-$panelbar-item-focused-bg: try-shade( $panelbar-header-bg, 1.5 ) !default;
+$panelbar-item-focused-bg: k-try-shade( $panelbar-header-bg, 1.5 ) !default;
 $panelbar-item-focused-text: null !default;
 $panelbar-item-focused-border: null !default;
 $panelbar-item-focused-gradient: null !default;
 $panelbar-item-focused-shadow: null !default;
 
-$panelbar-item-hovered-focused-bg: try-shade( $panelbar-header-bg, 2 ) !default;
+$panelbar-item-hovered-focused-bg: k-try-shade( $panelbar-header-bg, 2 ) !default;
 $panelbar-item-hovered-focused-text: null !default;
 $panelbar-item-hovered-focused-border: null !default;
 $panelbar-item-hovered-focused-gradient: null !default;
@@ -84,17 +84,17 @@ $panelbar-item-selected-text: $selected-text !default;
 $panelbar-item-selected-border: null !default;
 $panelbar-item-selected-gradient: null !default;
 
-$panelbar-item-selected-hovered-bg: try-tint($panelbar-item-selected-bg, .95) !default;
+$panelbar-item-selected-hovered-bg: k-try-tint($panelbar-item-selected-bg, .95) !default;
 $panelbar-item-selected-hovered-text: null !default;
 $panelbar-item-selected-hovered-border: null !default;
 $panelbar-item-selected-hovered-gradient: null !default;
 
-$panelbar-item-selected-focused-bg: try-tint($panelbar-item-selected-bg, 3) !default;
+$panelbar-item-selected-focused-bg: k-try-tint($panelbar-item-selected-bg, 3) !default;
 $panelbar-item-selected-focused-text: null !default;
 $panelbar-item-selected-focused-border: null !default;
 $panelbar-item-selected-focused-gradient: null !default;
 
-$panelbar-item-selected-hovered-focused-bg: try-tint($panelbar-item-selected-bg, 3.95) !default;
+$panelbar-item-selected-hovered-focused-bg: k-try-tint($panelbar-item-selected-bg, 3.95) !default;
 $panelbar-item-selected-hovered-focused-text: null !default;
 $panelbar-item-selected-hovered-focused-border: null !default;
 $panelbar-item-selected-hovered-focused-gradient: null !default;
