--- a/packages/material/scss/pdf-viewer/_variables.scss
+++ b/packages/material/scss/pdf-viewer/_variables.scss
@@ -8,7 +8,7 @@ $pdf-viewer-bg: $component-bg !default;
 $pdf-viewer-text: $component-text !default;
 $pdf-viewer-border: $component-border !default;
 
-$pdf-viewer-toolbar-bg: try-shade( $kendo-button-bg, .25 ) !default;
+$pdf-viewer-toolbar-bg: k-try-shade( $kendo-button-bg, .25 ) !default;
 $pdf-viewer-toolbar-text: null !default;
 $pdf-viewer-toolbar-border: null !default;
 $pdf-viewer-toolbar-gradient: null !default;
@@ -25,7 +25,7 @@ $pdf-viewer-page-border: $component-border !default;
 $pdf-viewer-page-shadow: 0 0 ($pdf-viewer-page-spacing / 2) $pdf-viewer-page-border !default;
 
 $pdf-viewer-search-panel-border-width: 1px !default;
-$pdf-viewer-search-panel-border-radius: map-get( $spacing, 1 ) !default;
+$pdf-viewer-search-panel-border-radius: k-map-get( $spacing, 1 ) !default;
 $pdf-viewer-search-panel-bg: $component-bg !default;
 $pdf-viewer-search-panel-text: $component-text !default;
 $pdf-viewer-search-panel-border: $component-border !default;
