--- a/packages/material/scss/rating/_variables.scss
+++ b/packages/material/scss/rating/_variables.scss
@@ -19,5 +19,5 @@ $rating-icon-selected-text: $primary-darker !default;
 $rating-icon-hover-text: $primary-darker !default;
 $rating-icon-focused-text: $primary-darker !default;
 
-$rating-icon-focused-shadow: 0 2px 4px rgba( $black, .1 ) !default;
-$rating-icon-focused-selected-shadow: 0 2px 4px rgba( $black, .1) !default;
+$rating-icon-focused-shadow: 0 2px 4px rgba( black, .1 ) !default;
+$rating-icon-focused-selected-shadow: 0 2px 4px rgba( black, .1) !default;
