--- a/packages/material/scss/slider/_variables.scss
+++ b/packages/material/scss/slider/_variables.scss
@@ -33,13 +33,13 @@ $slider-draghandle-pressed-text: null !default;
 $slider-draghandle-pressed-border: null !default;
 $slider-draghandle-pressed-gradient: null !default;
 
-$slider-draghandle-focused-shadow: 0 0 0 11px rgba($primary, .25) !default;
+$slider-draghandle-focused-shadow: 0 0 0 11px rgba( $primary, .25 ) !default;
 
 $slider-transition-speed: .3s !default;
 $slider-transition-function: ease-out !default;
 $slider-draghandle-transition-speed: .4s !default;
 $slider-draghandle-transition-function: cubic-bezier(.25, .8, .25, 1) !default;
 
-$slider-track-bg: try-tint( $primary, 8 ) !default;
+$slider-track-bg: k-try-tint( $primary, 8 ) !default;
 $slider-selection-bg: $primary !default;
 $slider-disabled-opacity: .65 !default;
