--- a/packages/material/scss/splitter/_variables.scss
+++ b/packages/material/scss/splitter/_variables.scss
@@ -14,10 +14,10 @@ $splitter-drag-handle-length: 20px !default;
 $splitter-drag-handle-thickness: 2px !default;
 $splitter-drag-icon-margin: 7px !default;
 
-$splitbar-bg: try-shade( $splitter-bg, 1 ) !default;
+$splitbar-bg: k-try-shade( $splitter-bg, 1 ) !default;
 $splitbar-text: $subtle-text !default;
 
-$splitbar-hover-bg: try-shade( $splitbar-bg, .5 ) !default;
+$splitbar-hover-bg: k-try-shade( $splitbar-bg, .5 ) !default;
 $splitbar-hover-text: $splitbar-text !default;
 
 $splitbar-selected-bg: $primary !default;
