--- a/packages/material/scss/spreadsheet/_layout.scss
+++ b/packages/material/scss/spreadsheet/_layout.scss
@@ -5,7 +5,7 @@
 
     // Quick access toolbar
     .k-spreadsheet-quick-access-toolbar {
-        padding: map-get( $spacing, 1 );
+        padding: k-map-get( $spacing, 1 );
 
         .k-button {
             border-radius: 50%;
@@ -28,7 +28,7 @@
         padding: 0;
 
         .k-spreadsheet-sheets-bar-add {
-            margin: map-get( $spacing, 1 );
+            margin: k-map-get( $spacing, 1 );
             border-radius: 50%;
             color: inherit;
             background: none;
