--- a/packages/material/scss/taskboard/_variables.scss
+++ b/packages/material/scss/taskboard/_variables.scss
@@ -1,5 +1,5 @@
 // TaskBoard
-$taskboard-spacer: map-get( $spacing, 4 ) !default;
+$taskboard-spacer: k-map-get( $spacing, 4 ) !default;
 $taskboard-padding-y: null !default;
 $taskboard-padding-x: null !default;
 $taskboard-font-family: $font-family !default;
@@ -19,9 +19,9 @@ $taskboard-toolbar-gradient: null !default;
 $taskboard-content-padding-y: $taskboard-spacer !default;
 $taskboard-content-padding-x: $taskboard-content-padding-y !default;
 
-$taskboard-column-container-spacing-y: ( $taskboard-spacer / 2 ) !default;
+$taskboard-column-container-spacing-y: k-math-div( $taskboard-spacer, 2 ) !default;
 $taskboard-column-container-padding-y: 0px !default;
-$taskboard-column-container-padding-x: ( $taskboard-spacer / 2 ) !default;
+$taskboard-column-container-padding-x: k-math-div( $taskboard-spacer, 2 ) !default;
 $taskboard-columns-container-gap: $taskboard-spacer !default;
 
 $taskboard-column-width: 320px !default;
@@ -33,7 +33,7 @@ $taskboard-column-border: transparent !default;
 
 $taskboard-column-focus-bg: null !default;
 $taskboard-column-focus-text: null !default;
-$taskboard-column-focus-border: try-shade( $base-border, 2.5 ) !default;
+$taskboard-column-focus-border: k-try-shade( $base-border, 2.5 ) !default;
 
 $taskboard-column-header-padding-y: ( $taskboard-spacer / 2 ) !default;
 $taskboard-column-header-padding-x: $taskboard-column-header-padding-y !default;
@@ -76,10 +76,10 @@ $taskboard-card-shadow: none !default;
 
 $taskboard-card-category-border-width: 4px !default;
 
-$taskboard-card-focus-border: try-shade( $taskboard-card-border, 9% ) !default;
+$taskboard-card-focus-border: k-try-shade( $taskboard-card-border, 9% ) !default;
 $taskboard-card-focus-shadow: none !default;
 
-$taskboard-card-hover-border: try-shade( $taskboard-card-border, 10% ) !default;
+$taskboard-card-hover-border: k-try-shade( $taskboard-card-border, 10% ) !default;
 
 $taskboard-card-selected-border: $primary-lighter !default;
 $taskboard-card-selected-shadow: none !default;
@@ -90,5 +90,5 @@ $taskboard-card-header-hover-text: $primary-darker !default;
 
 $taskboard-drag-placeholder-border-width: 1px !default;
 $taskboard-drag-placeholder-border-radius: $taskboard-card-border-radius !default;
-$taskboard-drag-placeholder-bg: rgba(255, 255, 255, .2) !default;
+$taskboard-drag-placeholder-bg: rgba( white, .2 ) !default;
 $taskboard-drag-placeholder-border: $component-border !default;
