--- a/packages/material/scss/tilelayout/_variables.scss
+++ b/packages/material/scss/tilelayout/_variables.scss
@@ -8,5 +8,5 @@ $tilelayout-hint-border-radius: $kendo-border-radius-md !default;
 
 $tilelayout-bg: if( $dark-theme, $dark, $light) !default;
 
-$tilelayout-hint-bg: rgba(255, 255, 255, .2) !default;
+$tilelayout-hint-bg: rgba( white, .2 ) !default;
 $tilelayout-hint-border: $component-border !default;
