--- a/packages/material/scss/toolbar/_theme.scss
+++ b/packages/material/scss/toolbar/_theme.scss
@@ -5,8 +5,8 @@
     .k-toolbar {
 
         .k-button-solid-base {
-            background-color: try-shade( $kendo-button-bg );
-            border-color: try-shade( $kendo-button-bg );
+            background-color: k-try-shade( $kendo-button-bg );
+            border-color: k-try-shade( $kendo-button-bg );
 
             &.k-input-button,
             &.k-input-spinner .k-spinner-increase,
