--- a/packages/material/scss/toolbar/_variables.scss
+++ b/packages/material/scss/toolbar/_variables.scss
@@ -2,17 +2,17 @@
 
 /// The horizontal padding of the container.
 /// @group toolbar
-$toolbar-padding-x: map-get( $spacing, 2 ) !default;
+$toolbar-padding-x: k-map-get( $spacing, 2 ) !default;
 /// The vertical padding of the container.
 /// @group toolbar
-$toolbar-padding-y: map-get( $spacing, 2 ) !default;
+$toolbar-padding-y: k-map-get( $spacing, 2 ) !default;
 $toolbar-border-width: 0 !default;
 $toolbar-border-radius: null !default;
 $toolbar-spacing: $toolbar-padding-x !default;
 
 $toolbar-font-family: $font-family !default;
 $toolbar-font-size: $font-size !default;
-$toolbar-line-height: (20 / 14) !default;
+$toolbar-line-height: k-math-div( 20, 14 ) !default;
 
 $toolbar-inner-calc-size: calc( #{$kendo-button-calc-size} + #{$toolbar-padding-y * 2} ) !default;
 
