--- a/packages/material/scss/upload/_variables.scss
+++ b/packages/material/scss/upload/_variables.scss
@@ -2,15 +2,15 @@
 $upload-border-width: 1px !default;
 $upload-font-family: $font-family !default;
 $upload-font-size: $font-size !default;
-$upload-line-height: ( 20 / 14 ) !default;
+$upload-line-height: k-math-div( 20, 14 ) !default;
 $upload-max-height: 300px !default;
 
 $upload-bg: $component-bg !default;
 $upload-text: $component-text !default;
 $upload-border: $component-border !default;
 
-$upload-dropzone-padding-x: map-get( $spacing, 2 ) !default;
-$upload-dropzone-padding-y: map-get( $spacing, 2 ) !default;
+$upload-dropzone-padding-x: k-map-get( $spacing, 2 ) !default;
+$upload-dropzone-padding-y: k-map-get( $spacing, 2 ) !default;
 $upload-dropzone-bg: $header-bg !default;
 $upload-dropzone-text: $header-text !default;
 $upload-dropzone-border: $upload-border !default;
@@ -19,8 +19,8 @@ $upload-dropzone-hover-bg: $hovered-bg !default;
 $upload-status-text: $subtle-text !default;
 $upload-status-text-opacity: null !default;
 
-$upload-item-padding-x: map-get( $spacing, 4 ) !default;
-$upload-item-padding-y: map-get( $spacing, 4 ) !default;
+$upload-item-padding-x: k-map-get( $spacing, 4 ) !default;
+$upload-item-padding-y: k-map-get( $spacing, 4 ) !default;
 
 $upload-multiple-items-spacing: 12px !default;
 
@@ -45,4 +45,4 @@ $upload-error-bg: $error !default;
 $upload-error-text: $error !default;
 $upload-error-border: $error !default;
 
-$upload-focused-shadow: 0 0 0 2px rgba(0, 0, 0, .13) !default;
+$upload-focused-shadow: 0 0 0 2px rgba( black, .13 ) !default;
